--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -14,6 +14,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/recycler_view"/>
+        android:id="@+id/menuRecycler_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
